force-app/main/default/objects/Invoice_Item__c/Invoice_Item__c.object-meta.xml
<CustomObject>
    <description>This field is used to track Invoice Item Details</description>
    <label>Invoice Item</label>
    <nameField>
        <displayFormat>INV-IT-{0000}</displayFormat>
        <label>Invoice Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>